# healthypi-move-fw

./: .gitignore
tests/: CMakeLists.txt  DOCUMENTATION.md  EXAMPLE.md  README.md  prj.conf  testcase.yaml
tests/src/: main.c  test_smf_display.c  test_smf_display_core.c  test_smf_display_simplified.c
tests/src/mocks/: mock_display_sh8601.h  mock_hpi_common_types.h  mock_hpi_sys.h  mock_hw_module.h  mock_lvgl.h  mock_max32664_updater.h  mock_ui_move.h
